--- a/src/djangoflix/templates/djangoflix/view_content.html
+++ b/src/djangoflix/templates/djangoflix/view_content.html
@@ -2,9 +2,266 @@
 {% load static %}
 {% block content %}
 
-<container>
-    <!-- Content Table-->
+<container class="d-flex flex-column gap-2">
+    {% if action %}
+    <section class="action-container">
+        <h1>Action</h1>
+        <ul class="action-list d-flex gap-1">
+            {% for content in action %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+    
+    {% if adventure %}
+    <section class="adventure-container">
+        <h1>Adventure</h1>
+        <ul class="adventure-list d-flex gap-1">
+            {% for content in adventure %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
 
+    {% if animated %}
+    <section class="animated-container">
+        <h1>Animated</h1>
+        <ul class="animated-list d-flex gap-1">
+            {% for content in animated %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if comedy %}
+    <section class="comedy-container">
+        <h1>Comedy</h1>
+        <ul class="comedy-list d-flex gap-1">
+            {% for content in comedy %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if crime %}
+    <section class="crime-container">
+        <h1>Crime</h1>
+        <ul class="crime-list d-flex gap-1">
+            {% for content in crime %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if documentary %}
+    <section class="documentary-container">
+        <h1>Documentary</h1>
+        <ul class="documentary-list d-flex gap-1">
+            {% for content in documentary %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if drama %}
+    <section class="drama-container">
+        <h1>Drama</h1>
+        <ul class="drama-list d-flex gap-1">
+            {% for content in drama %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if family %}
+    <section class="family-container">
+        <h1>Family</h1>
+        <ul class="family-list d-flex gap-1">
+            {% for content in family %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if fantasy %}
+    <section class="fantasy-container">
+        <h1>Fantasy</h1>
+        <ul class="fantasy-list d-flex gap-1">
+            {% for content in fantasy %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if history %}
+    <section class="history-container">
+        <h1>History</h1>
+        <ul class="history-list d-flex gap-1">
+            {% for content in history %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if horror %}
+    <section class="horror-container">
+        <h1>Horror</h1>
+        <ul class="horror-list d-flex gap-1">
+            {% for content in horror %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if kids %}
+    <section class="kids-container">
+        <h1>Kids</h1>
+        <ul class="kids-list d-flex gap-1">
+            {% for content in kids %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if music %}
+    <section class="music-container">
+        <h1>Music</h1>
+        <ul class="music-list d-flex gap-1">
+            {% for content in music %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if mystery %}
+    <section class="mystery-container">
+        <h1>Mystery</h1>
+        <ul class="mystery-list d-flex gap-1">
+            {% for content in mystery %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if reality %}
+    <section class="reality-container">
+        <h1>Reality</h1>
+        <ul class="reality-list d-flex gap-1">
+            {% for content in reality %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if romance %}
+    <section class="romance-container">
+        <h1>Romance</h1>
+        <ul class="romance-list d-flex gap-1">
+            {% for content in romance %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if scifi %}
+    <section class="scifi-container">
+        <h1>Sci-Fi</h1>
+        <ul class="scifi-list d-flex gap-1">
+            {% for content in scifi %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if thriller %}
+    <section class="thriller-container">
+        <h1>Thriller</h1>
+        <ul class="thriller-list d-flex gap-1">
+            {% for content in thriller %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if tv_movie %}
+    <section class="tv-movie-container">
+        <h1>TV Movie</h1>
+        <ul class="tv-movie-list d-flex gap-1">
+            {% for content in tv_movie %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
+
+    {% if war %}
+    <section class="war-container">
+        <h1>War & Politics</h1>
+        <ul class="war-list d-flex gap-1">
+            {% for content in war %}
+            <li class="content-tile">
+                <img src="{% static content.img_path %}" width="145">
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    {% endif %}
 </container>
 
 {% endblock %}
