Updates view_content.html h1 and scroll button colors to primary

--- a/src/djangoflix/templates/djangoflix/view_content.html
+++ b/src/djangoflix/templates/djangoflix/view_content.html
@@ -5,7 +5,7 @@
 <container class="d-flex flex-column gap-2">
     {% if action %}
     <section class="action-container">
-        <h1>Action</h1>
+        <h1 class="text-primary">Action</h1>
         <ul class="action-list d-flex gap-1">
             {% for content in action %}
             <li class="content-tile">
@@ -18,7 +18,7 @@
 
     {% if comedy %}
     <section class="comedy-container">
-        <h1>Comedy</h1>
+        <h1 class="text-primary">Comedy</h1>
         <ul class="comedy-list d-flex gap-1">
             {% for content in comedy %}
             <li class="content-tile">
@@ -31,7 +31,7 @@
 
     {% if drama %}
     <section class="drama-container">
-        <h1>Drama</h1>
+        <h1 class="text-primary">Drama</h1>
         <ul class="drama-list d-flex gap-1">
             {% for content in drama %}
             <li class="content-tile">
@@ -44,7 +44,7 @@
 
     {% if scifi %}
     <section class="scifi-container">
-        <h1>Sci-Fi</h1>
+        <h1 class="text-primary">Sci-Fi</h1>
         <ul class="scifi-list d-flex gap-1">
             {% for content in scifi %}
             <li class="content-tile">
@@ -57,7 +57,7 @@
     
     {% if thriller %}
     <section class="thriller-container">
-        <h1>Thriller</h1>
+        <h1 class="text-primary">Thriller</h1>
         <ul class="thriller-list d-flex gap-1">
             {% for content in thriller %}
             <li class="content-tile">
@@ -70,7 +70,7 @@
     
     {% if adventure %}
     <section class="adventure-container">
-        <h1>Adventure</h1>
+        <h1 class="text-primary">Adventure</h1>
         <ul class="adventure-list d-flex gap-1">
             {% for content in adventure %}
             <li class="content-tile">
@@ -83,7 +83,7 @@
 
     {% if animated %}
     <section class="animated-container">
-        <h1>Animated</h1>
+        <h1 class="text-primary">Animated</h1>
         <ul class="animated-list d-flex gap-1">
             {% for content in animated %}
             <li class="content-tile">
@@ -96,7 +96,7 @@
 
     {% if crime %}
     <section class="crime-container">
-        <h1>Crime</h1>
+        <h1 class="text-primary">Crime</h1>
         <ul class="crime-list d-flex gap-1">
             {% for content in crime %}
             <li class="content-tile">
@@ -109,7 +109,7 @@
     
     {% if fantasy %}
     <section class="fantasy-container">
-        <h1>Fantasy</h1>
+        <h1 class="text-primary">Fantasy</h1>
         <ul class="fantasy-list d-flex gap-1">
             {% for content in fantasy %}
             <li class="content-tile">
@@ -122,7 +122,7 @@
 
     {% if family %}
     <section class="family-container">
-        <h1>Family</h1>
+        <h1 class="text-primary">Family</h1>
         <ul class="family-list d-flex gap-1">
             {% for content in family %}
             <li class="content-tile">
@@ -135,7 +135,7 @@
     
     {% if kids %}
     <section class="kids-container">
-        <h1>Kids</h1>
+        <h1 class="text-primary">Kids</h1>
         <ul class="kids-list d-flex gap-1">
             {% for content in kids %}
             <li class="content-tile">
@@ -148,7 +148,7 @@
 
     {% if horror %}
     <section class="horror-container">
-        <h1>Horror</h1>
+        <h1 class="text-primary">Horror</h1>
         <ul class="horror-list d-flex gap-1">
             {% for content in horror %}
             <li class="content-tile">
@@ -161,7 +161,7 @@
 
     {% if mystery %}
     <section class="mystery-container">
-        <h1>Mystery</h1>
+        <h1 class="text-primary">Mystery</h1>
         <ul class="mystery-list d-flex gap-1">
             {% for content in mystery %}
             <li class="content-tile">
@@ -174,7 +174,7 @@
 
     {% if romance %}
     <section class="romance-container">
-        <h1>Romance</h1>
+        <h1 class="text-primary">Romance</h1>
         <ul class="romance-list d-flex gap-1">
             {% for content in romance %}
             <li class="content-tile">
@@ -187,7 +187,7 @@
 
     {% if tv_movie %}
     <section class="tv-movie-container">
-        <h1>TV Movie</h1>
+        <h1 class="text-primary">TV Movie</h1>
         <ul class="tv-movie-list d-flex gap-1">
             {% for content in tv_movie %}
             <li class="content-tile">
@@ -200,7 +200,7 @@
 
     {% if war %}
     <section class="war-container">
-        <h1>War & Politics</h1>
+        <h1 class="text-primary">War & Politics</h1>
         <ul class="war-list d-flex gap-1">
             {% for content in war %}
             <li class="content-tile">
@@ -213,7 +213,7 @@
     
     {% if history %}
     <section class="history-container">
-        <h1>History</h1>
+        <h1 class="text-primary">History</h1>
         <ul class="history-list d-flex gap-1">
             {% for content in history %}
             <li class="content-tile">
@@ -226,7 +226,7 @@
 
     {% if documentary %}
     <section class="documentary-container">
-        <h1>Documentary</h1>
+        <h1 class="text-primary">Documentary</h1>
         <ul class="documentary-list d-flex gap-1">
             {% for content in documentary %}
             <li class="content-tile">
@@ -239,7 +239,7 @@
     
     {% if reality %}
     <section class="reality-container">
-        <h1>Reality</h1>
+        <h1 class="text-primary">Reality</h1>
         <ul class="reality-list d-flex gap-1">
             {% for content in reality %}
             <li class="content-tile">
