--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -22,22 +22,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav color-primary">
                     <li class="nav-item" id="navHome">
-                        <a class="nav-link" href="{% url 'djangoflix:home' %}">Home</a>
+                        <a class="nav-link" href="{% url 'djangoflix:home' %}"><i class="fa-solid fa-house"></i> Home</a>
                     </li>
                     <li class="nav-item" id="navBrowse">
-                        <a class="nav-link" href="{% url 'djangoflix:browse' %}">Browse</a>
+                        <a class="nav-link" href="{% url 'djangoflix:browse' %}"><i class="fa-solid fa-video"></i> Browse</a>
                     </li>
                     <li class="nav-item" id="navMovies">
-                        <a class="nav-link" href="{% url 'djangoflix:movies' %}">Movies</a>
+                        <a class="nav-link" href="{% url 'djangoflix:movies' %}"><i class="fa-solid fa-film"></i> Movies</a>
                     </li>
                     <li class="nav-item" id="navTV">
-                        <a class="nav-link" href="{% url 'djangoflix:tv' %}">TV</a>
+                        <a class="nav-link" href="{% url 'djangoflix:tv' %}"><i class="fa-solid fa-tv"></i> TV</a>
                     </li>
                     <li class="nav-item" id="navFavorites">
-                        <a class="nav-link" href="{% url 'djangoflix:favorites' %}">Favorites</a>
+                        <a class="nav-link" href="{% url 'djangoflix:favorites' %}"><i class="fa-solid fa-heart"></i> Favorites</a>
                     </li>
                     <li class="nav-item" id="navSearch">
-                        <a class="nav-link" href="{% url 'djangoflix:search' %}">Search</a>
+                        <a class="nav-link" href="{% url 'djangoflix:search' %}"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
                     </li>
                 </ul>
             </div>
